--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
+    <domain-config cleartextTrafficPermitted="false">
+        <!-- Replace with your backend ip or domain -->
         <domain includeSubdomains="true">98.81.162.163</domain>
+
+        <trust-anchors>
+            <!-- keep server_cert in res/raw -->
+            <certificates src="@raw/server_cert" />
+        </trust-anchors>
     </domain-config>
 </network-security-config>
